--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -2878,7 +2878,7 @@
   "season.xp.boost": "+10% XP 提升",
   "season.lifetime.farmer": "终身农民",
   "season.free.with.lifetime": "终身农民免费领取",
-  "season.ticket.bonus": "+2 {{item}} s（送货和杂务）",
+  "season.ticket.bonus": "+2 {{item}} s（送货和农活）",
   "season.codex.intro": "在此次限定时季里赚取 {{ticket}} ，为您的农场铸造限定收藏品和穿戴品……时不我待，赶快行动吧！",
   "season.codex.howToEarn": "如何赚取 {{ticket}} ？",
   "season.codex.howToEarn.one": "光顾广场，向乡包佬运送资源。",
@@ -4466,7 +4466,7 @@
   "whatsOn.weatherEvents": "关注我们的特殊天气事件，保护您的农作物！",
   "whatsOn.nftRace": "NFT 竞赛开始了！",
   "whatsOn.february10th": "2 月 10 日",
-  "whatsOn.timeshardsEarning": "完成杂务、送货和赏金，赢取“时光裂片”！",
+  "whatsOn.timeshardsEarning": "完成农活、送货和赏金，赢取“时光裂片”！",
   "whatsOn.timeshardsUsage": "收集足够的“时光裂片”，在超级商店和拍卖行购买 NFT。",
   "whatsOn.skillSystem": "新技能系统上线！",
   "whatsOn.april14th": "4 月 14 日",
@@ -4576,7 +4576,7 @@
   "description.rhubarb.tart": "一款以新鲜大黄为特色的甜而浓郁的馅饼",
   "competition.ended": "比赛已经结束",
   "competition.ended.description": "比赛已经结束。感谢您的参与！",
-  "season.codex.howToEarn.two": "为 Bumpkins 完成家务。({{date}})",
+  "season.codex.howToEarn.two": "为 Bumpkins 完成农活。({{date}})",
   "season.codex.howToEarn.three": "交易牲畜和花卉赏金！({{date}})",
   "season.codex.mutants.four": "从奶牛身上收集牛奶来发现 {{item}}。",
   "season.codex.mutants.five": "从你的绵羊身上收集羊毛来发现 {{item}}。",
@@ -5115,7 +5115,7 @@
   "vip.benefit.cookingQueue": "在烹饪大楼里排队食谱",
   "restrictionReason.hasBonusAnimals.barn": "谷仓",
   "restrictionReason.hasBonusAnimals.henHouse": "鸡舍",
-  "description.igloo": "外面很冷，里面很舒服——家的甜蜜冰冻家。在<风云变幻>章节中，来自 “送货、家务和赏金” 的 +1 “时光裂片”。",
+  "description.igloo": "外面很冷，里面很舒服——家的甜蜜冰冻家。在<风云变幻>章节中，来自 “送货、农活和赏金” 的 +1 “时光裂片”。",
   "description.hammock": "在微风中轻轻摇摆，享受来之不易的休息。在<风云变幻>章节中，从 “送货、农活和赏金” 中获得 +1 “时光裂片”。",
   "reputation.sprout.description": "每天 1 单市集挂单",
   "reputation.seedling.trades": "每天 2 单市集挂单",
@@ -5569,7 +5569,7 @@
   "loveRush.dailyStreak": "与 NPC 保持每日送货记录，通过送货获得额外的爱心护符",
   "loveRush.treasureChest": "领取每日奖励时可获得额外的 15 个爱心护符！",
   "loveRush.eventTime": "“淘心热”活动还剩：{{time}}",
-  "loveRush.choreBonus": "一周内完成 21 个杂务，即可获得 100 个爱心护符！",
+  "loveRush.choreBonus": "一周内完成 21 个农活，即可获得 100 个爱心护符！",
   "loveRush.deliveryStreakBonus": "“淘心热”奖励：{{loveCharmReward}} 爱心护符",
   "description.floralArch": "这座宏伟的入口由大自然的精华构成，欢迎所有经过的人。",
   "description.flowerCoin": "象征着新起点，标志着 Sunflower Land 开启了一个新时代。",
@@ -5766,7 +5766,7 @@
   "hotAirBalloon.flightTimes": "升空次数有限",
   "hotAirBalloon.openNow": "立即打开",
   "hotAirBalloon.noFlights": "没有航班计划。",
-  "hotAirBalloon.letsGo": "我们走吧",
+  "hotAirBalloon.letsGo": "立刻启航",
   "description.barnBlueprint.boost1": "+5 基础畜棚容纳牲畜",
   "description.barnBlueprint.boost2": "畜棚每次升级 +5 最大容纳牲畜",
   "description.bronzeFlowerBox": "青铜花盒",
@@ -5774,7 +5774,7 @@
   "description.goldFlowerBox": "一个金色的花箱",
   "megastore.limit": "冷却时间：{{time}}",
   "megaBountyBoard.msg1": "欢迎来到超级赏金板！在时间用完之前，收集资源并用它们兑换奖励！",
-  "rewardShop.msg1": "欢迎来到我的奖励商店。收集爱情护身符并用它们兑换稀有物品。每天都有新的价格和不同的物品！",
+  "rewardShop.msg1": "欢迎来到我的奖励商店。收集爱心护符并用它们兑换稀有物品。每天都有新的价格和不同的物品！",
   "rewardShop.msg2": "商店每 24 小时更换一次",
   "megaBountyBoard.message": "欢迎来到超级赏金板！查看本周的赏金。如果你有任何需要的物品，你可以前往广场的 poppy 用它们兑换奖励！",
   "petalPuzzle.alreadyClaimed": "已经申领了",
@@ -5784,33 +5784,33 @@
   "bounties.bonus.headToPoppy": "前往 Poppy 领取奖金！",
   "bounties.bonus.clickToClaim": "申领奖金",
   "bounties.bonus.getBonus": "完成所有赏金可获得 50 {{seasonalTicket}} 的奖励！",
-  "description.bronzeFoodBox": "青铜食物盒",
+  "description.bronzeFoodBox": "一个青铜食物盒",
   "description.silverFoodBox": "一个银色的食物盒",
   "description.goldFoodBox": "一个金色的食物盒",
-  "description.bronzeToolBox": "青铜工具箱",
-  "description.silverToolBox": "银色工具箱",
+  "description.bronzeToolBox": "一个青铜工具箱",
+  "description.silverToolBox": "一个银色工具箱",
   "description.goldToolBox": "一个金色的工具箱",
   "description.testBox": "一个测试箱",
   "vip.benefit.stellaDiscounts": "Stella FLOWER 折扣 (50%)",
   "vip.benefit.greatBloom": "Great Bloom VIP 2x 花盒奖励",
   "whatsOn.vipPass": "获取 VIP 通行证以获得额外的 Geniseeds 和津贴！",
   "whatsOn.ticketsEnd": "再也不会有 Geniseeds 了",
-  "whatsOn.ticketPaused": "Bumpkins 正在度假 —— 再也不会有来自琐事和赏金的 Geniseeds 了。",
-  "whatsOn.greatBloom": "大花开",
+  "whatsOn.ticketPaused": "Bumpkins 正在度假 —— 再也不会有来自农活和赏金的 Geniseeds 了。",
+  "whatsOn.greatBloom": "心花怒放",
   "whatsOn.floatingIsland": "浮岛出现了。乘坐心形气球，用爱心护身符兑换奖励！",
   "whatsOn.flowerPuzzle": "解开每日社区难题以获得额外奖励",
   "whatsOn.brokenPillars": "沙漠中出现了远古的断柱。你能找到他们吗？",
   "whatsOn.megaBountyBoard": "Poppy 更新了她的超级赏金板。用鱼、宝藏 + 更多物品兑换章节代币",
   "whatsOn.may5th": "5 月 5 日",
-  "whatsOn.genesisEarning": "完成杂务、送货和赏金即可获得 Geniseeds！",
+  "whatsOn.genesisEarning": "完成农活、送货和赏金即可获得 Geniseeds！",
   "whatsOn.genesisUsage": "收集足够的 Geniseeds，在超级商店和拍卖行购买 NFT。",
   "whatsOn.june23rd": "6 月 23 日",
   "whatsOn.august1st": "8 月 1 日",
   "whatsOn.coopSeason": "合作章节",
   "whatsOn.coopSeasonText": "合作章节在这里。一种帮助朋友并获得奖励的新方法！",
-  "whatsOn.coopSeasonText2": "种植巨型作物，清理附近的农场，建立牢固的友谊。",
-  "news.greatBloom": "大花开",
-  "news.greatBloom.description": "大花就在这里。为期 3 个月的竞赛，旨在赚取 Geniseed 代币并将其兑换 NFT 和 FLOWER。",
+  "whatsOn.coopSeasonText2": "种植巨型庄稼，清理附近的农场，建立牢固的友谊。",
+  "news.greatBloom": "心花怒放",
+  "news.greatBloom.description": "心花怒放就在这里。为期 3 个月的竞赛，旨在赚取 Geniseed 代币并将其兑换 NFT 和 FLOWER。",
   "whatsOn.flowerBox": "用 Geniseeds 兑换 $FLOWER Box",
   "description.quarry": "这是一个永不枯竭的古老石头遗址，非常适合那些寻求稳定的免费石头供应的人。",
   "description.obsidianTurtle": "这种古老的生物稳定而沉默，无论它在哪里漫游，都会收集火山石的痕迹。",
@@ -5827,37 +5827,37 @@
   "description.bonusGeniseed.boost": "+1 Geniseed",
   "description.giantKale": "一只巨型羽衣甘蓝...",
   "description.giantKale.boost": "+2 羽衣甘蓝",
-  "description.giantZuchinni.boost": "2 倍西葫芦速度",
-  "description.giantYam.boost": "+0.5 Yams",
-  "description.oracleSyringe.boost": "免费治疗动物",
-  "description.quarry.boost": "免费开采石头",
+  "description.giantZuchinni.boost": "-50% 西葫芦生产时间",
+  "description.giantYam.boost": "+0.5 山药",
+  "description.oracleSyringe.boost": "免费治疗牲畜",
+  "description.quarry.boost": "免费开采石脉",
   "description.obsidianTurtle.boost": "+0.5 黑曜石",
   "description.winterGuardian.boost": "冬季灾难保护",
-  "description.winterGuardian.boost2": "冬季祝福活动",
+  "description.winterGuardian.boost2": "冬季祝福效果 x2 倍",
   "description.autumnGuardian.boost": "秋季灾难保护",
-  "description.autumnGuardian.boost2": "秋日祝福活动",
+  "description.autumnGuardian.boost2": "秋季祝福效果 x2 倍",
   "description.springGuardian.boost": "春季灾难保护",
-  "description.springGuardian.boost2": "春季祝福活动",
+  "description.springGuardian.boost2": "春季祝福效果 x2 倍",
   "description.summerGuardian.boost": "夏季灾难保护",
-  "description.summerGuardian.boost2": "夏日祝福活动",
-  "description.medicApron.boost": "半价药品",
-  "description.broccoliHat.boost": "2 倍西兰花速度",
+  "description.summerGuardian.boost2": "夏季祝福效果 x2 倍",
+  "description.medicApron.boost": "-50% Barn Delight 制作成本",
+  "description.broccoliHat.boost": "-50% 西兰花生产时间",
   "rocketman.flower.exchange.one": "乘坐 Heart Air Ballon 旅行，用 Love Charms 兑换 $FLOWER。",
-  "description.obsidianNecklace.boost": "2 倍熔岩坑速度",
-  "description.redPepperOnesie.boost": "0.25 倍红辣椒速度",
+  "description.obsidianNecklace.boost": "-50% 岩浆池恢复速度",
+  "description.redPepperOnesie.boost": "-25% 红椒生产时间",
   "description.loveChicken": "一只充满爱与感情的变种鸡",
   "description.drCow": "一头打扮成有爱心医生的变种牛",
-  "description.drCow.boost": "奶牛的饲养成本降低 5%",
+  "description.drCow.boost": "-5% 奶牛饲料",
   "description.nurseSheep": "作为一名温柔的护士，一只准备好提供帮助的变种绵羊",
-  "description.nurseSheep.boost": "夏天羊不会生病",
+  "description.nurseSheep.boost": "夏季绵羊免疫疾病",
   "description.pinkDolphin": "一种具有美丽粉色色调的稀有海豚",
-  "description.pinkDolphin.boost": "春季捕鱼量增加 1%",
+  "description.pinkDolphin.boost": "春季，鱼类捕捞量 +1",
   "description.lunalist": "一件专用于月球的盛开神器。在 Great Bloom 章节中发现的一朵装饰性突变花",
-  "description.heartAirBalloon": "爱情的漂浮象征，随时准备振奋精神，振奋人心。+1 来自送货、家务和赏金的Geniseeds。",
+  "description.heartAirBalloon": "爱情的漂浮象征，随时准备振奋精神，振奋人心。+1 来自送货、农活和赏金的 Geniseeds。",
   "whatsOn.july28th": "7 月 28 日",
   "description.geniseed": "在 Great Bloom 章节中使用的门票",
   "interactableModals.petalClue.message1": "当花瓣呈橙色花朵时，会出现奖品。你能找到吗？",
-  "birdieplaza.choresAndRewards": "你还可以通过每周琐事、每日宝箱奖励和赏金系统获得 {{seasonalTicket}} s！",
+  "birdieplaza.choresAndRewards": "你还可以通过每周农活、每日宝箱奖励和赏金系统获得 {{seasonalTicket}} s！",
   "ready.in": "准备好了",
   "transaction.refresh.message": "看来您的交易已过期。请单击 “刷新” 重试。"
 }
