--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -258,7 +258,7 @@
   "description.hourglass.expired": "您的 {{hourglass}} 已过期。是时候再整一个了！",
   "description.hourglass.running": "这个 {{hourglass}} 能提供下列增益：{{boost}}。",
   "description.desert.rose.boost": "增加 1 层 10% 几率 +1 朵花卉的机会",
-  "description.pharaoh.gnome.boost": "+2 温室植物",
+  "description.pharaoh.gnome.boost": "+2 温室庄稼",
   "description.lemon.tea.bath.boost": "-50% 柠檬生长时间",
   "description.tomato.clown.boost": "-50% 番茄生长时间",
   "description.cannonball.boost": "-25% 番茄生长时间",
@@ -2048,7 +2048,7 @@
   "goblinTrade.select": "选择要出售的资源",
   "goldTooth.intro.part1": "哈哈，亲爱的！这个挖宝地充满了财富和冒险，很快就会为你们这些勇敢的农民敞开大门！",
   "goldTooth.intro.part2": "准备好加入我，因为寻宝行动很快就要开始了！",
-  "greenhouse.oilDescription": "温室需要石油来种植植物。",
+  "greenhouse.oilDescription": "温室需要石油来种植庄稼。",
   "greenhouse.oilRequired": "需要石油",
   "greenhouse.oilInMachine": "{{oil}} 机内石油",
   "greenhouse.insertOil": "注入石油：{{oil}} 可用",
@@ -4117,11 +4117,11 @@
   "skill.baleEconomy": "Bale 影响牛奶和羊毛产量",
   "skill.chonkyFeed.buff": "来自牲畜饲料的 2 倍牲畜经验值",
   "skill.chonkyFeed.debuff": "+50% 饲料可喂养所有牲畜",
-  "skill.glassRoom": "+0.1 温室农产品产量",
-  "skill.seededBounty.buff": "+0.5 温室农产品产量",
+  "skill.glassRoom": "+0.1 温室庄稼产量",
+  "skill.seededBounty.buff": "+0.5 温室庄稼产量",
   "skill.seededBounty.debuff": "+1 种植温室种子",
-  "skill.greasyPlants.buff": "+1 温室农产品产量",
-  "skill.greenhouseGamble": "25% 几率获得 +1 种温室农产品",
+  "skill.greasyPlants.buff": "+1 温室庄稼产量",
+  "skill.greenhouseGamble": "25% 几率获得 +1 种温室庄稼",
   "skill.floweryAbode.debuff": "+50% 花朵生长时间",
   "skill.compostingBonanza.buff": "提升时可使堆肥机再加快一个小时的速度",
   "skill.fruitfulBounty": "双重富有成效的混合效果",
@@ -4157,7 +4157,7 @@
   "temperateSeason.enterSeason": "进入 {{season}}",
   "temperateSeason.introduction.one": "你好 Farmer！在现实世界中，每隔 7 天，Sunflower Land 的季节就会改变！",
   "temperateSeason.introduction.two": "每个时季都会带来不同的机会。某些庄稼只能在特定季节生长。留意可能影响您的农场的季节性事件。",
-  "temperateSeason.introduction.three": "确保保护您的农作物并为任何事情做好准备！",
+  "temperateSeason.introduction.three": "确保保护您的庄稼并为任何事情做好准备！",
   "temperateSeason.acknowledge": "明白了！",
   "temperateSeason.possibleEvents": "可能发生的事件",
   "gameOptions.generalSettings.behaviour": "行为",
@@ -4215,13 +4215,13 @@
   "temperateSeason.weatherShop.buy.description": "购买物品以保护您的农场免受天气影响",
   "tornado": "龙卷风",
   "tornado.crops.destroyed": "龙卷风破坏",
-  "tornado.crops.destroyed.description": "龙卷风摧毁了你一半的农作物。请等待龙卷风过去。",
+  "tornado.crops.destroyed.description": "龙卷风摧毁了你一半的庄稼。请等待龙卷风过去。",
   "tornado.building.destroyed.description": "龙卷风正在席卷你的农场——这座建筑不安全！请等待龙卷风过去。",
   "tornado.protected.one": "你保护了你的农场免受龙卷风的侵害！",
-  "tornado.protected.two": "你的农作物都没有被摧毁。",
+  "tornado.protected.two": "你的庄稼都没有被摧毁。",
   "tornado.protected.three": "你的建筑物都没有受到损坏。",
   "tornado.destroyed.one": "哦不！龙卷风正在摧毁你的农场！",
-  "tornado.destroyed.two": "你的一些农作物被摧毁了。",
+  "tornado.destroyed.two": "你的一些庄稼被摧毁了。",
   "tornado.destroyed.three": "你的一些建筑物遭到破坏。",
   "tornado.specialEvent": "特别活动-龙卷风",
   "guide.factionPet.two": "你的阵营将有每周需要达到的目标经验值。如果派系达到目标，下周的目标将比前一周的目标高出 25%！如果未达到目标，它将重置回 1000 x 阵营成员。",
@@ -4230,13 +4230,13 @@
   "description.mangrove": "保护你免受海啸侵害的红树林！仅限一次性使用。",
   "tsunami": "海啸",
   "tsunami.crops.destroyed": "海啸的破坏",
-  "tsunami.crops.destroyed.description": "海啸摧毁了你一半的农作物。请等待海啸过去。",
+  "tsunami.crops.destroyed.description": "海啸摧毁了你一半的庄稼。请等待海啸过去。",
   "tsunami.building.destroyed.description": "海啸正在席卷你的农场——这座建筑不安全！请等待海啸过去。",
   "tsunami.protected.one": "你保护了你的农场免受海啸的侵害！",
-  "tsunami.protected.two": "你的农作物都没有被摧毁。",
+  "tsunami.protected.two": "你的庄稼都没有被摧毁。",
   "tsunami.protected.three": "你的建筑物都没有受到损坏。",
   "tsunami.destroyed.one": "哦不！海啸正在摧毁你的农场！",
-  "tsunami.destroyed.two": "你的一些农作物被摧毁了。",
+  "tsunami.destroyed.two": "你的一些庄稼被摧毁了。",
   "tsunami.destroyed.three": "你的一些建筑物遭到破坏。",
   "tsunami.specialEvent": "特别活动-海啸",
   "season.vip.purchase": "购买 VIP 访问权限",
@@ -4288,9 +4288,9 @@
   "powerSkills.reason.insufficientFertiliser": "不足 {{fertiliser}}",
   "powerSkills.reason.allPlotsFertilised": "所有地块都已施肥",
   "powerSkills.reason.allFruitPatchesFertilised": "所有的水果地都已施肥",
-  "powerSkills.reason.noCropsGrowing": "没有农作物在生长",
+  "powerSkills.reason.noCropsGrowing": "没有庄稼在生长",
   "powerSkills.reason.noTreesRecovering": "没有树木能恢复",
-  "powerSkills.reason.noGreenhouseProduceGrowing": "没有温室农产品在增长",
+  "powerSkills.reason.noGreenhouseProduceGrowing": "没有温室庄稼在增长",
   "powerSkills.reason.noBuildingsAreCooking": "没有建筑物在做饭",
   "powerSkills.reason.noFlowersGrowing": "花坛里没有开花",
   "powerSkills.reason.noOilreservesRefilling": "没有石油储备正在补充",
@@ -4298,11 +4298,11 @@
   "greatFreeze.description": "很棒的冻结就是冻结你的农场！",
   "greatFreeze.specialEvent": "特别活动-Great Freeze",
   "greatFreeze.protected.one": "你保护了你的农场免受大冻伤害！",
-  "greatFreeze.protected.two": "你的农作物都没有被冻结。",
+  "greatFreeze.protected.two": "你的庄稼都没有被冻结。",
   "greatFreeze.destroyed.one": "哦不！很棒的冻结就是冻结你的农场！",
-  "greatFreeze.destroyed.two": "你的一些农作物被冻结了。",
+  "greatFreeze.destroyed.two": "你的一些庄稼被冻结了。",
   "calendar.events.greatFreeze.title": "大冻结",
-  "calendar.events.greatFreeze.description": "一场毁灭性的寒流使农作物冻结。",
+  "calendar.events.greatFreeze.description": "一场毁灭性的寒流使庄稼冻结。",
   "description.basic.scarecrow.boost.skill": "-30% 增长时间",
   "description.scary.mike.boost.skill": "+0.3 中阶庄稼",
   "description.laurie.chuckle.crow.boost.skill": "+0.3 高阶庄稼",
@@ -4355,21 +4355,21 @@
   "crops.flower": "花",
   "bountifulHarvest.specialEvent": "特别活动-丰收",
   "bountifulHarvest.noticeboard.one": "今天是丰收的一天！",
-  "bountifulHarvest.noticeboard.two": "您的农作物、水果和温室农产品今天将额外产生 +1。",
+  "bountifulHarvest.noticeboard.two": "您的庄稼、水果和温室庄稼今天将额外产生 +1。",
   "bountifulHarvest.noticeboard.three": "享受丰厚的奖励，充分利用这段繁荣的时光。",
   "calendar.events.bountifulHarvest.title": "丰收",
   "insectPlague.specialEvent": "特别活动-虫害",
-  "insectPlague.protected.one": "你保护了你的农作物免受虫害的侵害！",
-  "insectPlague.protected.two": "你的农作物都没有受到影响。",
-  "insectPlague.destroyed.one": "哦不！虫害正在侵扰你的农作物！",
-  "insectPlague.destroyed.two": "虫害摧毁了你的农作物，使所有收成减少了一半",
+  "insectPlague.protected.one": "你保护了你的庄稼免受虫害的侵害！",
+  "insectPlague.protected.two": "你的庄稼都没有受到影响。",
+  "insectPlague.destroyed.one": "哦不！虫害正在侵扰你的庄稼！",
+  "insectPlague.destroyed.two": "虫害摧毁了你的庄稼，使所有收成减少了一半",
   "calendar.events.insectPlague.title": "虫害",
   "calendar.events.insectPlague.prevention": "保护性农药",
   "calendar.events.tornado.prevention": "龙卷风车",
   "calendar.events.tsunami.prevention": "红树林",
   "calendar.events.greatFreeze.prevention": "热石",
   "calendar.events.sunshower.title": "日光浴",
-  "sunshower.info.one": "你的农作物生长速度快了 2 倍！",
+  "sunshower.info.one": "你的庄稼生长速度快了 2 倍！",
   "sunshower.tooltip": "阳光明媚-作物速度提高了 2 倍。",
   "sunshower.specialEvent": "特别活动-太阳雨",
   "fullMoon.one": "所有茄子都一夜长出来了。",
@@ -4463,7 +4463,7 @@
   "whatsOn.volcanoIsland": "升级到火山岛，探索熔岩坑并收集黑曜石！",
   "whatsOn.ancientClocks": "远古时钟已经出现在沙漠中！",
   "whatsOn.solarForge": "访问沃尔卡罗岛，在太阳能熔炉交换你的日光石！",
-  "whatsOn.weatherEvents": "关注我们的特殊天气事件，保护您的农作物！",
+  "whatsOn.weatherEvents": "关注我们的特殊天气事件，保护您的庄稼！",
   "whatsOn.nftRace": "NFT 竞赛开始了！",
   "whatsOn.february10th": "2 月 10 日",
   "whatsOn.timeshardsEarning": "完成农活、送货和赏金，赢取“时光裂片”！",
@@ -4532,12 +4532,12 @@
   "flower.breed.whiteClover": "一朵白色的三叶草",
   "flower.breed.blueClover": "一朵蓝色的三叶草",
   "calendar.events.tornado.description": "一场强大的龙卷风。",
-  "calendar.events.fullMoon.description": "奇异生物和农作物出现的罕见事件。",
+  "calendar.events.fullMoon.description": "奇异生物和庄稼出现的罕见事件。",
   "calendar.events.tsunami.description": "破坏性浪潮。",
   "calendar.events.bountifulHarvest.description": "神奇的光环席卷了你的农场。",
-  "calendar.events.insectPlague.description": "一场虫害，会吞噬你的农作物。",
+  "calendar.events.insectPlague.description": "一场虫害，会吞噬你的庄稼。",
   "insectPlague.crops.affected": "虫害困扰着你的农场。",
-  "calendar.events.sunshower.description": "明亮的雨水会给你的农作物带来好运。",
+  "calendar.events.sunshower.description": "明亮的雨水会给你的庄稼带来好运。",
   "calendar.events.fishFrenzy.description": "水里有东西在搅动。",
   "solarForge.intro.greeting": "哇，我很惊讶你能走这么远！",
   "solarForge.intro.gunter": "我是炼狱铁匠冈特。",
@@ -4622,7 +4622,7 @@
   "animals.guide.sickness": "当心疾病！等级较高的牲畜更容易受到感染-使用 Barn Delight 药物来治愈它们。",
   "season.megastore.crafting.limit": "限制：{{limit}} /1",
   "description.ladybugSuit.boost": "-25% 洋葱种子金币成本",
-  "beehive.pollinationCelebration": "授粉庆典！你的农作物有机会获得来自友军蜂群的 + {{amount}} 加成！",
+  "beehive.pollinationCelebration": "授粉庆典！你的庄稼有机会获得来自友军蜂群的 + {{amount}} 加成！",
   "skill.greenThumb": "-5% 田坑庄稼生长时间",
   "skill.coinSwindler": "在市场上出售田坑庄稼时 +10% 金币",
   "skill.greasyPlants.debuff": "+100% 温室的石油消耗量",
@@ -4634,7 +4634,7 @@
   "portal.chickenRescue.title": "贪救鸡",
   "portal.chickenRescue.description": "在这场生存挑战赛中，帮助营救小鸡，同时避开棘手的障碍！",
   "portal.cropsAndChickens.title": "庄稼与鸡",
-  "portal.cropsAndChickens.description": "在这场快节奏的挑战中，与时间赛跑，收集农作物，同时躲避小鸡！",
+  "portal.cropsAndChickens.description": "在这场快节奏的挑战中，与时间赛跑，收集庄稼，同时躲避小鸡！",
   "portal.fruitDash.title": "水果狂奔",
   "portal.fruitDash.description": "在这场无尽的挑战中，只要你能收集水果就能存活下来，同时躲避障碍物！",
   "portal.halloween.title": "万圣节",
@@ -5074,7 +5074,7 @@
   "chore.prepare.bumpkinDetox.15": "准备 15 次 Bumpkin Detox",
   "chore.grow.whitePansy.3": "种植 3 次 White Pansy",
   "chore.cook.fermentedFish.5": "准备 5 次 Fermented Fish",
-  "skill.instantGrowth": "令田坑里正在生长的所有农作物可供收获",
+  "skill.instantGrowth": "令田坑里正在生长的所有庄稼可供收获",
   "skill.zestyVibes.debuff": "所有其他水果的产量 -0.25",
   "skill.fishyGamble": "增加 1 层 20% 几率 +1 条专家鱼的机会",
   "skill.barnyardRouse": "令正在睡眠的所有牲畜立刻醒来",
@@ -5124,9 +5124,9 @@
   "reputation.marketplace.listingsLeft": "剩余挂单",
   "reputation.cropkeeper.trades": "无限量挂单和报价",
   "reputation.cropkeeper.offers": "提出并接受报价",
-  "statements.water.well.needed.one": "建造水井以支持更多农作物",
-  "statements.water.well.needed.two": "为了养活更多的农作物，请建造一口井。",
-  "statements.water.well.needed.three": "充分放水以支持更多农作物",
+  "statements.water.well.needed.one": "建造水井以支持更多庄稼",
+  "statements.water.well.needed.two": "为了养活更多的庄稼，请建造一口井。",
+  "statements.water.well.needed.three": "充分放水以支持更多庄稼",
   "statements.upgrade.water.well": "升级 Water Well 以支持更多庄稼",
   "upgrade.intro.water.well": "嘿 Bumpkin！想升级你的 {{building}} 以提高地块的生育率吗？",
   "upgrade.sheep.cows": "绵羊和奶牛",
@@ -5157,7 +5157,7 @@
   "description.rock.golem": "有 10% 的几率获得 +2 石头",
   "wallet.RequiresPol": "铸造农场 NFT 需要 Polygon 网络和农场关联钱包中的 POL 代币",
   "description.thermalStone": "一块能保护你免受极度冻结的热石！仅限一次性使用。",
-  "description.protectivePesticide": "一种可以保护您的农作物免受虫害侵害的杀虫剂！仅限一次性使用。",
+  "description.protectivePesticide": "一种可以保护您的庄稼免受虫害侵害的杀虫剂！仅限一次性使用。",
   "season.PlaceProtectiveEquipment": "为了抵御天气事件，请在事件发生前在农场或房屋内放置防护设备。",
   "chore.harvest.yam.30": "收获山药 30 次",
   "chore.harvest.yam.60": "收获山药 60 次",
@@ -5350,8 +5350,8 @@
   "deposit.flower.refreshing": "正在刷新...",
   "deposit.flower.refreshDeposit": "刷新存款",
   "skill.goldenSunflower": "收获向日葵时有 1/700 几率获得 0.35 黄金（不包括自动种植机）",
-  "skill.riceAndShine": "温室农产品的生长时间 -5%",
-  "skill.slickSaver": "-1 种植温室农产品的油",
+  "skill.riceAndShine": "温室庄稼的生长时间 -5%",
+  "skill.slickSaver": "-1 种植温室庄稼的油",
   "islandupgrade.tempItemWarning": "活跃的图腾/沙漏将被烧毁",
   "faceRecognition.cooldownTitle": "尝试次数太多",
   "faceRecognition.cooldownDescription": "请稍候，然后再试一次。",
@@ -5381,7 +5381,7 @@
   "taskBoard.tasksDescriptionTwo": "爱心护符可用于在奖励商店购买特殊物品",
   "taskBoard.otherWays": "其他赚取爱心护符的方法",
   "taskBoard.howToRefer": "如何推荐朋友？",
-  "chapters.guide.one": "章节带来了新的挑战、收藏品和宝藏。玩家收集门票，必须计划如何明智地使用它们。",
+  "chapters.guide.one": "章节带来了新的挑战、收藏品和宝藏。玩家收集票券，必须计划如何明智地使用它们。",
   "chapters.guide.three": "惊喜活动和独特的奖励使每个章节充满活力和吸引力。",
   "reputation.guide.connectDiscord": "单击齿轮图标，选择常规设置，然后单击 Discord 按钮，连接您的 Discord 帐户。",
   "skillCategory.reachIsland": "到达 {{island}} 即可解锁",
@@ -5452,7 +5452,7 @@
   "breadWinner.description": "赚取 0.001 枚 FLOWER",
   "breadWinner.one": "好吧，好吧，好吧，伙伴...看来你需要一些 FLOWER！",
   "breadWinner.two": "在 Sunflower Land 中，大量藏匿的 FLOWER 是制作工具、建筑物和稀有 NFT 的关键",
-  "breadWinner.three": "赚取 FLOWER 的最快方法是种植和出售农作物。",
+  "breadWinner.three": "赚取 FLOWER 的最快方法是种植和出售庄稼。",
   "bumpkinBillionaire.description": "赚取 5,000 枚 FLOWER",
   "bigSpender.description": "消費 10 枚 FLOWER",
   "highRoller.description": "消费 7,500 枚 FLOWER",
@@ -5486,7 +5486,7 @@
   "addSFL": "添加 FLOWER",
   "sfl/coins": "FLOWER / 金币",
   "goblinTrade.hoarding": "哦不！你已经达到了 FLOWER 的上限。",
-  "deliveries.guide.two": "作为一名新玩家，你一开始会下几个命令，但是随着你的bumpkin等级的提高，你将解锁额外的订单。这样，高级玩家可以完成更多订单。每隔 24 小时就会有新的订单，提供来自食物、资源、 FLOWER 等的一系列请求。完成订单将为您赢得金币、FLOWER 或季节性门票。",
+  "deliveries.guide.two": "作为一名新玩家，你一开始会下几个命令，但是随着你的bumpkin等级的提高，你将解锁额外的订单。这样，高级玩家可以完成更多订单。每隔 24 小时就会有新的订单，提供来自食物、资源、 FLOWER 等的一系列请求。完成订单将为您赢得金币、FLOWER 或季节性票券。",
   "marketplace.sfl": "FLOWER",
   "marketplace.lastSold": "上次售出价格:{{sfl}} FLOWER",
   "marketplace.howMuch": "您想报价多少 FLOWER？",
@@ -5855,7 +5855,7 @@
   "description.lunalist": "一件专用于月球的盛开神器。在 Great Bloom 章节中发现的一朵装饰性突变花",
   "description.heartAirBalloon": "爱情的漂浮象征，随时准备振奋精神，振奋人心。+1 来自送货、农活和赏金的 Geniseeds。",
   "whatsOn.july28th": "7 月 28 日",
-  "description.geniseed": "在 Great Bloom 章节中使用的门票",
+  "description.geniseed": "在 Great Bloom 章节中使用的票券",
   "interactableModals.petalClue.message1": "当花瓣呈橙色花朵时，会出现奖品。你能找到吗？",
   "birdieplaza.choresAndRewards": "你还可以通过每周农活、每日宝箱奖励和赏金系统获得 {{seasonalTicket}} s！",
   "ready.in": "准备好了",
