--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5767,8 +5767,8 @@
   "hotAirBalloon.openNow": "立即打开",
   "hotAirBalloon.noFlights": "没有航班计划。",
   "hotAirBalloon.letsGo": "立刻启航",
-  "description.barnBlueprint.boost1": "+5 基础畜棚容纳牲畜",
-  "description.barnBlueprint.boost2": "畜棚每次升级 +5 最大容纳牲畜",
+  "description.barnBlueprint.boost1": "基础畜棚获得 +5 容纳上限",
+  "description.barnBlueprint.boost2": "畜棚每次升级将获得 +5 最大容纳上限",
   "description.bronzeFlowerBox": "青铜花盒",
   "description.silverFlowerBox": "一个银色的花箱",
   "description.goldFlowerBox": "一个金色的花箱",
@@ -5778,12 +5778,12 @@
   "rewardShop.msg2": "商店每 24 小时更换一次",
   "megaBountyBoard.message": "欢迎来到超级赏金板！查看本周的赏金。如果你有任何需要的物品，你可以前往广场的 poppy 用它们兑换奖励！",
   "petalPuzzle.alreadyClaimed": "已经申领了",
-  "petalPuzzle.comeBackTomorrow": "你今天已经领取了奖金。明天再来。",
+  "petalPuzzle.comeBackTomorrow": "你今天已经领取了奖励。明天再来。",
   "petalPuzzle.congratulations": "恭喜，你们都解开了今天的谜题！",
-  "bounties.bonus.allCompleted": "所有赏金已完成！",
-  "bounties.bonus.headToPoppy": "前往 Poppy 领取奖金！",
-  "bounties.bonus.clickToClaim": "申领奖金",
-  "bounties.bonus.getBonus": "完成所有赏金可获得 50 {{seasonalTicket}} 的奖励！",
+  "bounties.bonus.allCompleted": "所有赏金任务已完成！",
+  "bounties.bonus.headToPoppy": "前往 Poppy 领取奖励！",
+  "bounties.bonus.clickToClaim": "申领奖励",
+  "bounties.bonus.getBonus": "完成所有赏金任务可获得 50 {{seasonalTicket}} 的奖励！",
   "description.bronzeFoodBox": "一个青铜食物盒",
   "description.silverFoodBox": "一个银色的食物盒",
   "description.goldFoodBox": "一个金色的食物盒",
