--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -3136,13 +3136,13 @@
   "description.skills.barnManager": "牲畜产出增加 10％",
   "description.skills.seedSpecialist": "庄稼生长时间减少 10%",
   "description.skills.wrangler": "牲畜睡眠时间减少 10%",
-  "description.skills.lumberjack": "木头掉落量增加 10%",
-  "description.skills.prospector": "石头掉落量增加 20%",
-  "description.skills.logger": "斧头可靠性延长至 2 倍",
-  "description.sklils.goldRush": "黄金掉落量增加 50%",
+  "description.skills.lumberjack": "木头产量增加 10%",
+  "description.skills.prospector": "石头产量增加 20%",
+  "description.skills.logger": "斧头使用次数延长至 2 倍",
+  "description.sklils.goldRush": "黄金产量增加 50%",
   "description.skills.artist": "种子和工具价格便宜 10％",
   "description.skills.coder": "庄稼产量增加 20%",
-  "description.skills.discordMod": "木头掉落量增加 35%",
+  "description.skills.discordMod": "木头产量增加 35%",
   "description.skills.warrior": "（已编辑）",
   "description.flag.australia": "澳大利亚国旗",
   "description.flag.belgian": "比利时国旗",
@@ -3302,7 +3302,7 @@
   "listing": "正在上架",
   "deleting.listing": "撤销挂单",
   "selling": "正在出售",
-  "marketplace.collection": "藏品",
+  "marketplace.collection": "收藏品",
   "marketplace.purpose": "目的",
   "marketplace.boost": "加成",
   "gameOptions.developerOptions": "开发者选项",
@@ -4025,7 +4025,7 @@
   "skill.ferrousFavor.buff": "+1 铁矿产量",
   "skill.ferrousFavor.debuff": "-0.5 石头产量",
   "skill.goldenTouch": "+0.5 黄金产量",
-  "skill.firesideAlchemist": "-15% 猩红宝石脉恢复时间",
+  "skill.firesideAlchemist": "-15% 猩红石脉恢复时间",
   "skill.fastFeasts": "-10% 篝火和厨房的烹饪时间",
   "skill.nomNom": "+10% 食物送货收入",
   "skill.munchingMastery": "+5% 所有食物食用经验",
@@ -4761,9 +4761,9 @@
   "chore.mine.gold.30": "开采 30 次金脉",
   "chore.mine.gold.38": "开采 38 次金脉",
   "chore.mine.gold.45": "开采 45 次金脉",
-  "chore.mine.crimstone.20": "开采 20 次猩红宝石脉",
-  "chore.mine.crimstone.22": "开采 22 次猩红宝石脉",
-  "chore.mine.crimstone.24": "开采 24 次猩红宝石脉",
+  "chore.mine.crimstone.20": "开采 20 次猩红石脉",
+  "chore.mine.crimstone.22": "开采 22 次猩红石脉",
+  "chore.mine.crimstone.24": "开采 24 次猩红石脉",
   "chore.mine.iron.150": "开采 150 次铁脉",
   "chore.mine.iron.175": "开采 175 次铁脉",
   "chore.mine.iron.200": "开采 200 次铁脉",
@@ -5070,7 +5070,7 @@
   "chore.cook.sushiRoll.10": "烹饪 10 次 Sushi Roll",
   "chore.eat.chowder.7": "吃 7 个 Chowder",
   "chore.harvest.olives.8": "收获 8 个橄榄",
-  "chore.mine.crimstone.10": "开采 10 次猩红宝石脉",
+  "chore.mine.crimstone.10": "开采 10 次猩红石脉",
   "chore.prepare.bumpkinDetox.15": "准备 15 次 Bumpkin Detox",
   "chore.grow.whitePansy.3": "种植 3 次 White Pansy",
   "chore.cook.fermentedFish.5": "准备 5 次 Fermented Fish",
@@ -5624,7 +5624,7 @@
   "budBuff.stem.fishHat.boost": "10% 几率获得 +1 条鱼（茎）",
   "budBuff.stem.diamondGem.boost": "+0.2 矿物质（茎）",
   "budBuff.stem.goldGem.boost": "+0.2 黄金（主干）",
-  "budBuff.stem.minerHat.boost": "+0.2 铁（茎）",
+  "budBuff.stem.minerHat.boost": "+0.2 铁矿（茎）",
   "budBuff.stem.carrotHead.boost": "+0.3 胡萝卜（茎）",
   "budBuff.stem.sunflowerHat.boost": "+0.5 向日葵（茎）",
   "budBuff.stem.basicLeafHat.boost": "+0.2 低阶庄稼（茎）",
