--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -1064,7 +1064,7 @@
   "fishermanModal.bonusFish": "快点，每一次渔获都能抓来额外一条鱼！",
   "fishermanModal.needCraftRod": "您必须先锻造一根钓竿。",
   "fishermanModal.craft.beach": "在沙滩上锻造",
-  "fishermanModal.zero.available": "无 剩余可用",
+  "fishermanModal.zero.available": "无剩余可用",
   "fishermanmodal.greeting": "嚯，岛上的朋友们！我是 {{name}}，你们可靠的岛上渔夫，我已经准备好迎击一项伟大的挑战——收集日光之下的每一种鱼！",
   "fishermanModal.fullMoon": "哇，看看那满月！我听闻这会儿你有机会抓到稀有的海洋奇珍。",
   "fishermanQuest.Ohno": "不好！它跑掉了",
@@ -1262,7 +1262,7 @@
   "alr.crafted": "已锻造！",
   "alr.minted": "已铸造！",
   "auction": "竞拍",
-  "available": "可用",
+  "available": "限量",
   "back": "返回",
   "bait": "鱼饵",
   "balance": "余额：",
