--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -1262,7 +1262,7 @@
   "alr.crafted": "已锻造！",
   "alr.minted": "已铸造！",
   "auction": "竞拍",
-  "available": "限量",
+  "available": "库存",
   "back": "返回",
   "bait": "鱼饵",
   "balance": "余额：",
