--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6029,5 +6029,6 @@
   "description.broccoliHat.boost": "2x Broccoli Speed",
   "description.redPepperOnesie.boost": "0.25x Red Pepper Speed",
   "interactableModals.petalClue.message1": "When the petals are in an orange bloom, a prize appears. Can you find it?",
-  "current.timezone": "Current timezone: {{timeZone}}"
+  "current.timezone": "Current timezone: {{timeZone}}",
+  "transaction.whalePack": "Whale pack can only be bought with FLOWER."
 }
