--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5840,7 +5840,7 @@
   "description.springGuardian.boost2": "春季祝福效果 x2 倍",
   "description.summerGuardian.boost": "夏季灾难保护",
   "description.summerGuardian.boost2": "夏季祝福效果 x2 倍",
-  "description.medicApron.boost": "-50% Barn Delight 混制成本",
+  "description.medicApron.boost": "只需使用半瓶药剂治愈牲畜",
   "description.broccoliHat.boost": "-50% 西兰花生产时间",
   "rocketman.flower.exchange.one": "乘坐 Heart Air Ballon 旅行，用 Love Charms 兑换 $FLOWER。",
   "description.obsidianNecklace.boost": "-50% 岩浆池恢复速度",
