--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -2923,7 +2923,7 @@
   "statements.auctioneer.two": "千万不要错过拍卖会，看我挥动我的强大锤子就能将你辛苦赚来的资源变成稀有的铸造奇迹！",
   "statements.beta.one": "只有我们的 OG 农民才能使用 Beta 测试版。",
   "statements.beta.two": "请继续关注更新。我们很快就要上线了！",
-  "statements.better.luck": "下次好运！",
+  "statements.better.luck": "祝你下次好运！",
   "statements.blacklist.one": "反脚本和多账户检测系统发现了异常行为。行动已受到限制。",
   "statements.blacklist.two": "请提交包含详细信息的工单，我们会尽快回复您。",
   "statements.clickBottle": "点击一个瓶子来提交您的猜测",
