--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6031,5 +6031,5 @@
   "interactableModals.petalClue.message1": "When the petals are in an orange bloom, a prize appears. Can you find it?",
   "current.timezone": "Current timezone: {{timeZone}}",
   "transaction.whalePack": "Whale pack can only be bought with FLOWER.",
-  "deposit.flower.guide": "To deposit, switch to the {{network}} network in your personal wallet and send $FLOWER to the address shown below."
+  "deposit.flower.guide": "To deposit, switch to the {{network}} network in your personal wallet and send FLOWER to the address shown below."
 }
