--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5840,6 +5840,7 @@
   "marketplace.acceptedOffer": "Accepted Offer",
   "twitter.post.farm": "Share your farm",
   "twitter.post.weekly": "Share your weekly progress",
+  "twitter.post.flower": "Celebrate the launch of $FLOWER! 5 winners each week will be chosen to win an extra 100 $FLOWER!",
   "posting.twitter.success": "Tweet posted successfully!",
   "posting.twitter.failed": "No Tweets Found",
   "posting.twitter.failed.description": "Hmm, it looks like you haven't posted a tweet yet. Please check you have uploaded a correct image and hashtag.",
