[FEAT] Flower Launch (#5624)
* [FEAT] Flower launch

* Fix hardcoded strings

* Fix TSC

* [FEAT] link

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5840,6 +5840,7 @@
   "marketplace.acceptedOffer": "Accepted Offer",
   "twitter.post.farm": "Share your farm",
   "twitter.post.weekly": "Share your weekly progress",
+  "twitter.post.flower": "Celebrate the launch of $FLOWER! 5 winners each week will be chosen to win an extra 100 $FLOWER!",
   "posting.twitter.success": "Tweet posted successfully!",
   "posting.twitter.failed": "No Tweets Found",
   "posting.twitter.failed.description": "Hmm, it looks like you haven't posted a tweet yet. Please check you have uploaded a correct image and hashtag.",
@@ -6031,5 +6032,8 @@
   "interactableModals.petalClue.message1": "When the petals are in an orange bloom, a prize appears. Can you find it?",
   "current.timezone": "Current timezone: {{timeZone}}",
   "transaction.whalePack": "Whale pack can only be bought with FLOWER.",
-  "deposit.flower.guide": "To deposit, switch to the {{network}} network in your personal wallet and send FLOWER to the address shown below."
+  "deposit.flower.guide": "To deposit, switch to the {{network}} network in your personal wallet and send FLOWER to the address shown below.",
+  "flower.launch.one": "$FLOWER ERC20 is live on BASE",
+  "flower.launch.two": "Deposits are enabled",
+  "flower.launch.three": "Liquidity rewards and withdrawals starting soon"
 }
