[FEAT] Change Old Deposit To In Game Items Only (#5626)
* [FEAT] Convert old deposit to in game items only

* [FEAT] Remove old sfl deposit

* [CHORE] Fix conflict

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6035,5 +6035,6 @@
   "deposit.flower.guide": "To deposit, switch to the {{network}} network in your personal wallet and send FLOWER to the address shown below.",
   "flower.launch.one": "$FLOWER ERC20 is live on BASE",
   "flower.launch.two": "Deposits are enabled",
-  "flower.launch.three": "Liquidity rewards and withdrawals starting soon"
+  "flower.launch.three": "Liquidity rewards and withdrawals starting soon",
+  "deposit.items": "Deposit Game Items"
 }
