[FEAT] Implement withdrawal feature access control and update UI
* Added conditional rendering for withdrawal label based on feature access for FLOWER_WITHDRAW.
* Updated WithdrawFlower component to include a warning label for limited withdrawal during the initial launch of $FLOWER.
* Introduced a new feature flag for WITHDRAWAL_THRESHOLD with a defined time period.
* Updated translations to include a message regarding withdrawal limitations for $FLOWER.

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3678,6 +3678,7 @@
   "withdraw.bumpkin.wearing": "Your Bumpkin is currently wearing the following item(s) that can't be withdrawn. You will need to unequip them before you can withdraw.",
   "withdraw.buds": "Select Buds to withdraw",
   "withdraw.budRestricted": "Used in today's bud box",
+  "withdraw.flower.limited": "During the initial launch of $FLOWER, the amount of $FLOWER you can withdraw is limited.",
   "world.lvl.requirement": "Lvl {{lvl}}",
   "world.factionMembersOnly": "Faction members only",
   "world.newArea": "New",
