--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5826,7 +5826,7 @@
   "description.bonusGeniseed.boost": "+1 Geniseed",
   "description.giantKale": "一只巨型羽衣甘蓝...",
   "description.giantKale.boost": "+2 羽衣甘蓝",
-  "description.giantZuchinni.boost": "-50% 西葫芦生产时间",
+  "description.giantZuchinni.boost": "-50% 西葫芦生长时间",
   "description.giantYam.boost": "+0.5 山药",
   "description.oracleSyringe.boost": "免费治疗牲畜",
   "description.quarry.boost": "免费开采石脉",
@@ -5840,10 +5840,10 @@
   "description.summerGuardian.boost": "夏季灾难保护",
   "description.summerGuardian.boost2": "夏季祝福效果 x2 倍",
   "description.medicApron.boost": "使用 0.5 瓶 Barn Delight 治愈牲畜",
-  "description.broccoliHat.boost": "-50% 西兰花生产时间",
+  "description.broccoliHat.boost": "-50% 西兰花生长时间",
   "rocketman.flower.exchange.one": "乘坐 Heart Air Ballon 旅行，用 Love Charms 兑换 $FLOWER。",
   "description.obsidianNecklace.boost": "-50% 岩浆池恢复速度",
-  "description.redPepperOnesie.boost": "-25% 红椒生产时间",
+  "description.redPepperOnesie.boost": "-25% 红椒生长时间",
   "description.loveChicken": "一只充满爱与感情的变种鸡",
   "description.drCow": "一头打扮成有爱心医生的变种牛",
   "description.drCow.boost": "-5% 奶牛饲料",
