--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5829,7 +5829,7 @@
   "description.giantZuchinni.boost": "-50% 西葫芦生长时间",
   "description.giantYam.boost": "+0.5 山药",
   "description.oracleSyringe.boost": "免费治疗牲畜",
-  "description.quarry.boost": "免费开采石脉",
+  "description.quarry.boost": "无需用镐开采石脉",
   "description.obsidianTurtle.boost": "+0.5 黑曜石",
   "description.winterGuardian.boost": "冬季灾难保护",
   "description.winterGuardian.boost2": "冬季祝福效果 x2 倍",
