--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5826,8 +5826,10 @@
   "description.bonusGeniseed.boost": "+1 Geniseed",
   "description.giantKale": "一只巨型羽衣甘蓝...",
   "description.giantKale.boost": "+2 羽衣甘蓝",
+  "description.giantZuchinni.boost": "-50% 西葫芦生长时间",
   "description.giantYam.boost": "+0.5 山药",
   "description.oracleSyringe.boost": "免费治疗牲畜",
+  "description.quarry.boost": "无需用镐开采石脉",
   "description.obsidianTurtle.boost": "+0.5 黑曜石",
   "description.winterGuardian.boost": "冬季灾难保护",
   "description.winterGuardian.boost2": "冬季祝福效果 x2 倍",
@@ -5837,7 +5839,11 @@
   "description.springGuardian.boost2": "春季祝福效果 x2 倍",
   "description.summerGuardian.boost": "夏季灾难保护",
   "description.summerGuardian.boost2": "夏季祝福效果 x2 倍",
+  "description.medicApron.boost": "使用 0.5 瓶 Barn Delight 治愈牲畜",
+  "description.broccoliHat.boost": "-50% 西兰花生长时间",
   "rocketman.flower.exchange.one": "乘坐 Heart Air Ballon 旅行，用 Love Charms 兑换 $FLOWER。",
+  "description.obsidianNecklace.boost": "-50% 岩浆池恢复速度",
+  "description.redPepperOnesie.boost": "-25% 红椒生长时间",
   "description.loveChicken": "一只充满爱与感情的变种鸡",
   "description.drCow": "一头打扮成有爱心医生的变种牛",
   "description.drCow.boost": "-5% 奶牛饲料",
@@ -5862,12 +5868,6 @@
   "flower.launch.one": "$FLOWER ERC20 已在 BASE 上线",
   "flower.launch.two": "存款已启用",
   "flower.launch.three": "流动性奖励和提款即将开始",
-  "description.giantZuchinni.boost": "-50% 西葫芦生长时间",
-  "description.quarry.boost": "不用镐开采石头",
-  "description.obsidianNecklace.boost": "-50% 熔岩洞时间",
-  "description.medicApron.boost": "-50% 治疗动物的药物",
-  "description.broccoliHat.boost": "-50% 西兰花生长时间",
-  "description.redPepperOnesie.boost": "-25% 红辣椒生长时间",
   "deposit.items": "存款游戏物品",
   "withdraw.sfl.available": "{{flower}} FLOWER 可供提款",
   "withdraw.flower.limited": "在首次推出$FLOWER期间，您可以提取的$FLOWER金额是有限的。"
