[FEAT] Add in game rewards

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6037,5 +6037,12 @@
   "flower.launch.one": "$FLOWER ERC20 is live on BASE",
   "flower.launch.two": "Deposits are enabled",
   "flower.launch.three": "Liquidity rewards and withdrawals starting soon",
-  "deposit.items": "Deposit Game Items"
+  "deposit.items": "Deposit Game Items",
+  "socialTask.merkl": "Merkl LP Rewards",
+  "merkl.rewards": "Merkl Rewards",
+  "merkl.description": "Our friends at Merkl are giving away $FLOWER to the community members who are providing liquidity to support ecosystem.",
+  "merkl.disclaimer": "Always DYOR and beware of scams. This is not an investment",
+  "merkl.one": "Claim FLOWER each day in the Merkl app.",
+  "merkl.two": "Bonus rewards each day in-game for the top 10, 50 & 250 providers based on the leaderboard",
+  "merkl.three": "A bonus exclusive wearable for all providers!"
 }
