--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6044,5 +6044,5 @@
   "merkl.disclaimer": "Always DYOR and beware of scams. This is not an investment",
   "merkl.one": "Claim FLOWER each day in the Merkl app.",
   "merkl.two": "Bonus rewards each day in-game for the top 10, 50 & 250 providers based on the leaderboard",
-  "merkl.three": "A bonus exclusive wearable for all providers!"
+  "merkl.three": "A bonus food boxes & an exclusive wearable for all providers!"
 }
